File: plugins/nexus-repository-apt/src/test/java/org/sonatype/nexus/repository/apt/virtualthread/AptVirtualThreadTest.java